# metaobject

./: README.md  package.json  setup.cfg  setup.py
metaobject/: __init__.py  objects.py
