[metadata]
name = metaobject
author = 1Ticket
author-email = support@1ticket.com
summary = 1Ticket meta object protocol library
description-file = README.md
download-url = https://github.com/1T/metaobject/archive/master.zip
home-page = https://github.com/1T/metaobject

[files]
packages =
    metaobject
